add jvm part